@@ -1,3 +1,4 @@
+2016-05-25 Added parsing for views of gaps in editor
 2016-05-23 Fixed adding empty class to wrong element in Text Identification module
 2016-05-23 Added playing event in Audio and Video modules
 2016-05-18 Added reseting poster before adding new one in Video module
